Update GridServiceImpl.java